crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_wrong_prophecy_contract.rs
fn set_to_two(x: &mut i32)
//@ req true
//@ ens {x}.fin == 2
{
    *x = 3;
}

fn main() {}
